creates the cpp files for the classes, creates constructors

--- a/cicaprojekt/cicaprojekt/cicaprojekt.vcxproj
+++ b/cicaprojekt/cicaprojekt/cicaprojekt.vcxproj
@@ -112,9 +112,13 @@
   <ItemGroup>
     <ClCompile Include="..\..\cica.cpp" />
     <ClCompile Include="..\..\main.cpp" />
+    <ClCompile Include="cat.cpp" />
+    <ClCompile Include="user.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\cica.h" />
+    <ClInclude Include="cat.h" />
+    <ClInclude Include="user.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
