--- a/cicaprojekt/cicaprojekt/cicaprojekt.vcxproj.filters
+++ b/cicaprojekt/cicaprojekt/cicaprojekt.vcxproj.filters
@@ -21,9 +21,21 @@
     <ClCompile Include="..\..\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="user.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="cat.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\cica.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="user.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="cat.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
